--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "alchemy-sdk": "^3.4.1",
     "dotenv": "^16.4.5",
+    "ethers": "^5.7.2",
     "express": "^4.20.0",
     "node-telegram-bot-api": "^0.66.0",
     "nodemon": "^3.1.4"
