--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@uniswap/sdk-core": "^5.8.0",
+    "@uniswap/v3-sdk": "^3.17.0",
     "alchemy-sdk": "^3.4.1",
     "dotenv": "^16.4.5",
     "ethers": "^5.7.2",
